# DragonOS

./: .envrc  .gitignore  .gitmodules  .readthedocs.yaml  1.txt  AGENTS.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  README_CN.md  README_EN.md  ROADMAP_FUSE.md  SUPPORTERS.md  TASK_2028.md  TASK_2029.md  TODO_FUSE_FULL_PLAN_CN.md  TODO_FUSE_PHASE_AB.md  TODO_FUSE_PHASE_CD.md  VIRTIOFS_DESIGN_PLAN_CN.md  bochsrc  bx_enh_dbg.ini  compile_hint.txt  dadk-manifest.toml  deleted.cc  diff.txt  env.mk  errseq-设计.md  fixme.md  flake.nix  inotify-design.md  keen-spinning-sunset.md  package-lock.json  result  run.sh  run_in_bochs.sh  run_in_qemu.sh  rust-toolchain.toml  serial_opt1.txt  serial_opt2.txt  (+4 more)
bootloader/: CMakeLists.txt  Makefile  boot.asm  fat12.inc  loader.asm
crates/: Cargo.toml
crates/another_ext4/: Cargo.toml
crates/another_ext4/ext4_fuse/: Cargo.toml
crates/asm_macros/: Cargo.toml
crates/asm_macros/src/: lib.rs
crates/bitmap/src/: static_bitmap.rs
crates/bitmap/tests/: static-bitmap.rs
crates/crc/src/: crc64.rs  lib.rs
crates/driver_base_macros/: Cargo.toml
crates/driver_base_macros/src/: lib.rs
crates/ida/src/: lib.rs
crates/intertrait/: .gitignore
crates/intertrait/src/: lib.rs
crates/intertrait/tests/: castable_to.rs  on-struct.rs  on-trait-impl-assoc-type3.rs  on-trait-impl.rs  run.rs
crates/kdepends/src/: lib.rs
crates/klog_types/: Cargo.toml
crates/klog_types/src/: lib.rs
crates/kprobe/src/: lib.rs
crates/rust-jhash/: Cargo.toml
crates/rust-slabmalloc/src/: lib.rs  pages.rs  prop_tests.rs  sc.rs
crates/syscall_table_macros/src/: lib.rs
crates/system_error/src/: another_ext4.rs
crates/unified-init/macros/: Cargo.toml
crates/unified-init/src/: main.rs
crates/wait_queue_macros/: Cargo.toml
kernel/: .clippy.toml  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  build.rs  cbindgen.toml  env.mk  glib.h  head.S  link.lds  main.c  printk.c  printk.h  rust-analyzer.toml  rust-toolchain.toml  rustc-ice-2024-10-20T10_45_56-30636.txt
kernel/.cargo/: config.toml
kernel/arch/: arch.h
kernel/arch/x86_64/: Makefile  asm.h  current.h  ia64_msi.c  x86_64_ipi.c  x86_64_ipi.h
kernel/common/: Makefile  asm.h  bitree.c  bitree.h  blk_types.h  boot_info.h  compiler.h  compiler_attributes.h  completion.h  cpu.c  cpu.h  crc64.h  dirent.h  elf.h  err.h  errno.h  fcntl.h  font.h  glib.c  glib.h  hid.h  idr.h  kfifo.h  kprint.h  kthread.h  list.h  lz4.h  math.h  mutex.c  mutex.h  printk.c  printk.h  semaphore.c  semaphore.h  spinlock.h  stdio.h  stdlib.h  string.c  string.h  time.h  (+3 more)
kernel/common/libELF/: elf.c  elf.h
kernel/common/math/: Makefile  fabs.c  pow.c
kernel/common/miniLibc/: stddef.h
kernel/common/sys/: types.h
kernel/crates/another_ext4/: .gitignore  Cargo.toml  LICENSE  README.md
kernel/crates/bitmap/: Cargo.toml
kernel/crates/crc/: Cargo.toml
kernel/crates/device-output-buffer/: Cargo.toml
kernel/crates/filesystem-manager/: Cargo.toml  TODO.md
kernel/crates/ida/: Cargo.toml  README.md
kernel/crates/initram_macros/: Cargo.toml  build.rs
kernel/crates/intertrait/: Cargo.toml  README.md
kernel/crates/kcmdline_macros/: Cargo.toml
kernel/crates/kdepends/: Cargo.toml
kernel/crates/klog_types/: Cargo.toml
kernel/crates/kprobe/: Cargo.toml
kernel/crates/multiboot/: Cargo.toml
kernel/crates/napi-state/: Cargo.toml
kernel/crates/path_base/: Cargo.toml
kernel/crates/rbpf/: Cargo.toml  README.md  rustfmt.toml
kernel/crates/rust-jhash/: Cargo.toml  LICENSE  README.md
kernel/crates/rust-slabmalloc/: Cargo.toml  README.host-tests.md
kernel/crates/syscall_table_macros/: Cargo.toml
kernel/crates/system_error/: Cargo.toml
kernel/crates/unified-init/: Cargo.toml
kernel/debug/: Makefile  bug.h  kallsyms.S
kernel/debug/traceback/: traceback.c
kernel/driver/: Makefile
kernel/driver/acpi/: Makefile  acpi.c  acpi.h
kernel/driver/disk/: Makefile  ata.c  ata.h  block_device.h
kernel/driver/hid/: Makefile  hidparse.c
kernel/driver/interrupt/: Makefile
kernel/driver/keyboard/: Makefile  keyboard.c  keyboard.h  ps2_keyboard.c  ps2_keyboard.h
kernel/driver/mouse/: Makefile  mouse.c  mouse.h  ps2_mouse.c  ps2_mouse.h
kernel/driver/multiboot2/: Makefile  boot.S  multiboot2.c  multiboot2.cpp  multiboot2.h
kernel/driver/pci/: Makefile  msi.c  msi.h  pci.c  pci.h
kernel/driver/timers/: Makefile  timer.c  timer.h
kernel/driver/tty/: Makefile  input_controller.c  tty.c  tty.h
kernel/driver/uart/: Makefile  uart.c  uart.h
kernel/driver/usb/: Makefile  usb.c  usb.h
kernel/driver/video/: Makefile  video.c  video.h
kernel/exception/: 8259A.c  8259A.h  Makefile  entry.S  gate.h  irq.c  irq.h  softirq.c  softirq.h  trap.c  trap.h
kernel/filesystem/: MBR.c  MBR.h  Makefile
kernel/filesystem/VFS/: Makefile  VFS.c  VFS.h  dcache.c  internal.h  mount.c  mount.h
kernel/filesystem/devfs/: Makefile  chardev.c  chardev.h  devfs-types.h  devfs.c  devfs.h  internal.h
kernel/filesystem/fat32/: Makefile  fat32.c  fat32.h  fat_ent.c  fat_ent.h
kernel/initram/: create_initram.sh
kernel/ipc/: Makefile  pipe.c  pipe.h
kernel/ktest/: Makefile  ktest.c  ktest.h  ktest_utils.h  test-bitree.c  test-idr.c  test-kfifo.c  test-mutex.c
kernel/lib/: Makefile  bitree.c  cpu.c  crc16.c  crc32.c  crc64.c  crc7.c  crc8.c  idr.c  kfifo.c  lz4.c  mutex.c  printk.c  semaphore.c  string.c  types.h  unistd.c  wait_queue.c  wait_queue_head.c
kernel/lib/libELF/: Makefile  (+1 more)
kernel/mm/: Makefile  internal.h  mm-types.h  mm.c  mm.h  mmap.c  mmio-buddy.c  mmio-buddy.h  mmio.c  mmio.h  slab.c  slab.h  utils.c  vma.c
kernel/process/: Makefile  atomic.h  kthread.c  preempt.h  proc-types.h  proc.S  process.c  process.h  ptrace.h  semaphore.h  spinlock.h  wait_queue.c  wait_queue.h
kernel/sched/: Makefile  cfs.c  cfs.h  completion.c  rt.c  rt.h  sched.c  sched.h
kernel/smp/: Makefile  apu_boot.S  ipi.h  smp.c  smp.h
kernel/src/: Makefile  head.S  lib.rs  link.lds  main.c
kernel/syscall/: Makefile  syscall.c  syscall.h  syscall_num.h
kernel/time/: Makefile  sleep.c  sleep.h  timer.c  timer.h
(+6613 files in other folders)
