[package]
name = "unified-init-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = { version = "2.0.42", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
unified-init = { path = ".." }
linkme = "=0.3.27"
system_error = { path = "../../system_error" }
