[package]
name = "filesystem-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "filesystem-manager-expand"
path = "src/main.rs"

[dependencies]
filesystem-manager-macros = { path = "macros" }
linkme = "0.2"
system_error = { path = "../system_error" }