[package]
name = "kprobe"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
yaxpeax-x86 = { version = "2", default-features = false, features = ["fmt"] }
yaxpeax-arch = { version = "0", default-features = false }

[target.'cfg(target_arch = "riscv64")'.dependencies]
raki = { git = "https://github.com/Alignof/raki" }