[package]
name = "unified-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "unified-init-expand"
path = "src/main.rs"

[dependencies]
unified-init-macros = { path = "macros" }
linkme = "=0.3.27"
system_error = { path = "../system_error" }
