[package]
name = "test-chown"
version = "0.1.0"
edition = "2021"
description = "测试chown系列系统调用"
authors = [ "sparkzky <sparkhhhhhhhhhh@outlook.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
errno = "0.3.9"
nix = "0.23"