[package]
name = "test-mount-ext4"
version = "0.1.0"
edition = "2021"
description = "测试是否可以通过mount系统调用来挂载ext4类型的硬盘"
authors = [ "sparkzky <sparkhhhhhhhhhh@outlook.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errno = "0.3.9"
libc="0.2"