[package]
name = "test_drsstd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_drsstd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drstd = {git = "https://git.mirrors.dragonos.org/DragonOS-Community/drstd.git", revision = "507ea70e05"}

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'