[package]
name = "test_ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { git = "https://github.com/os-module/tiny-aya.git" }
aya-log = { git = "https://github.com/os-module/tiny-aya.git" }

log = "0.4.22"
env_logger = "0.11.5"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }

[profile.release]
lto = true
strip = true
