[package]
name = "user-manage-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "useradd"
path = "useradd/src/main.rs"

[[bin]]
name = "userdel"
path = "userdel/src/main.rs"

[[bin]]
name = "usermod"
path = "usermod/src/main.rs"

[[bin]]
name = "passwd"
path = "passwd/src/main.rs"

[[bin]]
name = "groupadd"
path = "groupadd/src/main.rs"

[[bin]]
name = "groupdel"
path = "groupdel/src/main.rs"

[[bin]]
name = "groupmod"
path = "groupmod/src/main.rs"

[dependencies]
libc = "0.2.153"
